--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Документация
 ============
 
-- master: http://docs.eresus.ru/pub/libbotobor/master/docs/
+- master: http://ci.dvaslona.com/jenkins/view/mekras/job/botobor/javadoc/
